--- a/wp-content/themes/jupiter-child/style.css
+++ b/wp-content/themes/jupiter-child/style.css
@@ -77,6 +77,11 @@
 body {
   font-family: 'Futura LT Pro';
 }
+.pg-title > p {
+  font-size: 53px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
 .accordion-base > div > div > svg {
   fill: #0075c9;
 }
@@ -103,9 +108,14 @@ ul#menu-main_menu {
 ul#menu-main_menu > li > ul.sub-menu {
   background-color: #fff !important;
   color: #000;
-  width: 160px;
+  min-width: 160px;
   position: absolute;
-  top: 10;
+  top: 60px;
+  left: -20px;
+}
+ul#menu-main_menu > li > ul.sub-menu > li > a {
+  text-align: center;
+  width: auto;
 }
 .mk-main-navigation ul.sub-menu a.menu-item-link {
   color: #000;
@@ -117,14 +127,6 @@ ul#menu-main_menu > li > ul.sub-menu {
 }
 .mk-main-navigation ul.sub-menu a.menu-item-link:hover {
   color: #0075c9 !important;
-}
-.bg-image-cover {
-  background: url(http://localhost/wp-content/uploads/2017/04/blue_image_01.png) no-repeat 100% center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  min-height: 300px;
 }
 .main-navigation-ul > li.menu-item > a.menu-item-link:hover {
   background-size: 2px 100%;
