--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -133,6 +133,7 @@ body {
     font-size: $h1-heading;
     text-transform: uppercase;
     font-weight: 600;
+    color: $white;
 }
 
 .accordion-base > div> div> svg {
