header text styles global for all pages

--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -143,7 +143,19 @@ body {
     font-size: $h1-heading;
     text-transform: uppercase;
     font-weight: 600;
-    color: $white;
+    color: $white !important;
+    background-image: linear-gradient(to top,#000 46%,rgba(0,0,0,0) 45%);
+    background-size: 2px 200%;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+    color: inherit;
+    padding: 5px;
+    text-decoration: none;
+    transition: background-size 400ms ease-out;
+    background-size: 2px 100%;
+    transition-duration: 250ms;
+    transition-timing-function: ease; 
+    
 }
 
 .accordion-base > div> div> svg {
