--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -90,6 +90,22 @@ $h3-body: 27px; //20pts
   }
 }
 
+.btn-outline-white > button {
+  @extend %btn-outline;
+  border: 3px solid $white !important;
+  color: $white !important;
+  transition: all 0.2s ease-in;
+    background-color: #000 !important;
+  &:hover {
+    background: $blue !important;
+    color: $white !important;
+  }
+  &:active {
+    background: $black !important;
+    color: $white !important;
+  }
+}
+
 .btn-outline-black > button {
   @extend %btn-outline;
   border: 3px solid $black !important;
@@ -144,7 +160,7 @@ body {
     text-transform: uppercase;
     font-weight: 600;
     color: $white !important;
-    background-image: linear-gradient(to top,#000 46%,rgba(0,0,0,0) 45%);
+    background-image: linear-gradient(to top,#000 55%,rgba(0,0,0,0) 55%);
     background-size: 2px 200%;
     -webkit-box-decoration-break: clone;
     box-decoration-break: clone;
@@ -154,8 +170,63 @@ body {
     transition: background-size 400ms ease-out;
     background-size: 2px 100%;
     transition-duration: 250ms;
-    transition-timing-function: ease; 
-    
+    transition-timing-function: ease;
+    @media screen and (max-width: 782px){
+        font-size: 5.6vw;
+    }
+}
+
+.pg-indent {
+    padding: 0px 50px;
+    @media screen and (max-width: 782px){
+        padding: 0px 25px;
+    }
+}
+
+.pg-heading > h2 {
+    font-size: $h2-body;
+    @media screen and (max-width: 782px){
+        font-size: 5.6vw;
+    }
+}
+
+.bw-column {
+    background: $black;
+    padding: 10px;
+    border-bottom: 20px solid white;
+}
+
+.bw-column>div>h2{ 
+    color: $white;
+    padding: 15% 20px 0px;
+    font-size: 2.2vw;
+    @media screen and (max-width: 949px){
+        padding: 3% 20px 0px;
+    }
+    @media screen and (max-width: 768px) {
+        padding: 20px;
+    }
+}
+
+.bw-column>div>button {
+    margin-left: 40px;
+     @media screen and (max-width: 768px) {
+         margin-left: 20px;
+    }
+}
+
+.bw-column-text>p {
+    color: $white;
+    font-size: 1.25vw;
+    padding: 0px 40px;
+    @media screen and (max-width: 768px) {
+        font-size: 16px;
+        padding: 0px 20px;
+    }
+}
+
+.video-column {
+    padding: 0px;
 }
 
 .accordion-base > div> div> svg {
@@ -196,7 +267,7 @@ ul#menu-main_menu > li>ul.sub-menu {
     min-width: 160px; 
     position: absolute;
     top: 60px;
-    left: -20px;
+    left: -18px;
 }
 
 ul#menu-main_menu > li>ul.sub-menu > li > a {
@@ -210,12 +281,12 @@ ul#menu-main_menu > li>ul.sub-menu > li > a {
     font-weight: 700 !important;
 }
 
-.current_page_item {
-    color: $blue;
+.main-navigation-ul ul.sub-menu li.current-menu-item > a.menu-item-link {
+    color: $blue !important;
 }
 
 .mk-main-navigation ul.sub-menu a.menu-item-link:hover {
-    color: $blue !important;
+    color: $gray-link-hover !important;
 }
 
 // === Link Hover Effects for Main Menu === //
