--- a/wp-content/themes/jupiter-child/style.css
+++ b/wp-content/themes/jupiter-child/style.css
@@ -38,17 +38,17 @@
   border: 1px solid #9c9c9c;
   cursor: pointer;
 }
-.btn-outline-blue > button {
+.btn-outline-blue > button, #menu-main_menu li.menu-item.no-mega-menu:nth-child(n+5) > button {
   border: 3px solid #0075c9 !important;
   color: #0075c9 !important;
   transition: all 0.2s ease-in !important;
   background-color: #fff !important;
 }
-.btn-outline-blue > button:hover {
+.btn-outline-blue > button:hover, #menu-main_menu li.menu-item.no-mega-menu:nth-child(n+5) > button:hover {
   background: #0075c9 !important;
   color: #fff !important;
 }
-.btn-outline-blue > button:active {
+.btn-outline-blue > button:active, #menu-main_menu li.menu-item.no-mega-menu:nth-child(n+5) > button:active {
   background: #fff !important;
   color: #0075c9 !important;
 }
@@ -223,22 +223,44 @@ ul#menu-main_menu > li > ul.sub-menu > li > a {
 .mk-main-navigation ul.sub-menu a.menu-item-link:hover {
   color: #b7b7b7 !important;
 }
+#menu-main_menu li.menu-item.no-mega-menu {
+  margin-right: 10px;
+}
 #menu-main_menu li.menu-item.no-mega-menu:nth-child(4) {
   padding: 0px;
   height: 40px;
   top: 30px;
   position: relative;
   border: 3px solid #fff;
+  margin-left: 20px;
 }
 #menu-main_menu li.menu-item.no-mega-menu:nth-child(4) a {
   height: 100%;
-  line-height: 45px;
+  line-height: 45px !important;
   color: #fff;
 }
 #menu-main_menu li.menu-item.no-mega-menu:nth-child(4):hover {
   background: #fff;
   color: #0075c9;
   border: 3px solid #0075c9;
+}
+#menu-main_menu li.menu-item.no-mega-menu:nth-child(n+5) {
+  padding: 0px;
+  height: 40px;
+  top: 30px;
+  position: relative;
+  border: 3px solid #0075c9;
+  margin-right: 10px;
+}
+#menu-main_menu li.menu-item.no-mega-menu:nth-child(n+5) a {
+  height: 100%;
+  line-height: 45px !important;
+  color: #0075c9;
+}
+#menu-main_menu li.menu-item.no-mega-menu:nth-child(n+5):hover {
+  background: #0075c9;
+  color: #fff;
+  border: 3px solid #fff;
 }
 .main-navigation-ul > li.menu-item > a.menu-item-link:hover {
   background-size: 2px 100%;
