--- a/wp-content/themes/jupiter-child/style.css
+++ b/wp-content/themes/jupiter-child/style.css
@@ -99,15 +99,26 @@ body {
   position: relative;
 }
 .pg-title {
-  position: absolute;
+  position: relative;
   top: 485px;
-  right: 60px;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  display: block;
 }
 .pg-title > p {
+  background-image: linear-gradient(bottom, #000 50%, transparent 50%);
+  background-image: -o-linear-gradient(bottom, #000 50%, transparent 50%);
+  background-image: -moz-linear-gradient(bottom, #000 50%, transparent 50%);
+  background-image: -webkit-linear-gradient(bottom, #000 50%, transparent 50%);
+  background-image: -ms-linear-gradient(bottom, #000 50%, transparent 50%);
   font-size: 53px;
   text-transform: uppercase;
   font-family: Futura LT Pro Heading;
   color: #fff !important;
+  padding: 0 15px;
+  height: auto;
+  display: inline-block;
 }
 @media screen and (max-width: 782px) {
   .pg-title > p {
